[package]
name = "mcp4725"
version = "0.2.0"
edition = "2024"
description = "Embedded-hal async/sync driver for Microchip MCP4725 12-bit DAC"
license = "MIT"
repository = "https://github.com/yourusername/mcp4725-embassy"
keywords = ["embedded", "dac", "mcp4725", "embassy", "async"]
categories = ["embedded", "hardware-support"]

[dependencies]
# Core library dependencies (minimal)
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
defmt = { version = "1.0.1", optional = true }

[features]
default = []

[profile.release]
debug = 2

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
# strip = true

# This example asssumes an STM32L053R8. Change the respective embassy-stm32 feature to your chip if you choose something different.
# You will also need to change the chip type in the .cargo/config.toml file.
[[example]]
name = "stm32_sine_wave"

# Dependencies for examples.
[dev-dependencies]
defmt = "1.0.1"
embassy-time = "0.4.0"
defmt-rtt = "1.0.0"
embedded-io-async = "0.6.1"
cortex-m-rt = "0.7.5"
embassy-embedded-hal = "0.3.1"
embedded-hal-bus = "0.3.0"
micromath = "2.1.0"
critical-section = "1.2.0"
embassy-sync = { version = "0.7.0", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32l053r8",
    "unstable-pac",
    "time-driver-any",
    "exti",
    "memory-x",
] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
